# otus-c-2025-3-kushko

./: .gitignore
dpdk-analyzer/: CMakeLists.txt  hugepages.sh  main.c  run.sh
dpdk-analyzer/libs/logger/include/: logger.h
hw01-rarjpeg/: CMakeLists.txt  main.c
hw01-rarjpeg/data/: book.txt
hw02-weather/: CMakeLists.txt  main.c
hw03-asm/: CMakeLists.txt  main.c
hw03-weather/: CMakeLists.txt
hw04-curl/: make_and_install_curl.sh
hw05-valgrind/: diff.patch
hw06-gtk/: CMakeLists.txt  main.c
hw07-logger/app/: CMakeLists.txt  main.c
hw07-logger/logger/: CMakeLists.txt  logger.c  main.c
hw08-daemon/: CMakeLists.txt  hw08-daemon.ini  main.c
hw09-crc32/: CMakeLists.txt  main.c
hw10-threads/: CMakeLists.txt  file_list.c  file_list.h  main.c  stat_parser.c  stat_parser.h  topn_container.c  topn_container.h
hw11-telnet/: CMakeLists.txt  main.c
hw12-webserver/: CMakeLists.txt  main.c
hw13-ftrace/: CMakeLists.txt  ftrace_output.txt  main.c
hw14-driver/: Makefile  custom_mouse_driver_snippet.cpp  mouse_driv.c
hw15-database/: CMakeLists.txt  main.c
hw16-cube/: CMakeLists.txt  main.c
hw17-tetris/: CMakeLists.txt  game.c  game.h  main.c  run.sh  scoreboard.c  scoreboard.h
